// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select/> tests basic filter works: Filtered Menu 1`] = `
<div>
  <div
    class="bp3-popover-wrapper main bp3-fill"
  >
    <div
      class="bp3-popover-target bp3-popover-open"
    >
      <div
        class="bp3-input-group"
      >
        <input
          class="bp3-input"
          placeholder="- Select -"
          style="padding-right: 0px;"
          type="text"
          value="cha"
        />
        <span
          class="bp3-input-action"
        >
          <span
            aria-hidden="true"
            class="bp3-icon bp3-icon-chevron-down main padding padding-small"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            >
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
    <div
      class="bp3-overlay bp3-overlay-open bp3-overlay-inline"
    >
      <div
        class="bp3-transition-container bp3-popover-appear bp3-popover-appear-active"
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      >
        <div
          class="bp3-popover bp3-minimal bp3-select-popover popover"
        >
          <div
            class="bp3-popover-content"
          >
            <div>
              <ul
                class="bp3-menu"
              >
                <li
                  class="menuItem active"
                >
                  <p
                    class="font lineclamp main menuItemLabel"
                    style="--text-line-clamp: 1;"
                  >
                    Charmander
                  </p>
                </li>
                <li
                  class="menuItem"
                >
                  <p
                    class="font lineclamp main menuItemLabel"
                    style="--text-line-clamp: 1;"
                  >
                    Charmeleon
                  </p>
                </li>
                <li
                  class="menuItem"
                >
                  <p
                    class="font lineclamp main menuItemLabel"
                    style="--text-line-clamp: 1;"
                  >
                    Charizard
                  </p>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Select/> tests basic filter works: Initial Menu 1`] = `
<div>
  <div
    class="bp3-popover-wrapper main bp3-fill"
  >
    <div
      class="bp3-popover-target bp3-popover-open"
    >
      <div
        class="bp3-input-group"
      >
        <input
          class="bp3-input"
          placeholder="- Select -"
          style="padding-right: 0px;"
          type="text"
          value=""
        />
        <span
          class="bp3-input-action"
        >
          <span
            aria-hidden="true"
            class="bp3-icon bp3-icon-chevron-down main padding padding-small"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            >
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
    <div
      class="bp3-overlay bp3-overlay-open bp3-overlay-inline"
    >
      <div
        class="bp3-transition-container bp3-popover-appear bp3-popover-appear-active"
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      >
        <div
          class="bp3-popover bp3-minimal bp3-select-popover popover"
        >
          <div
            class="bp3-popover-content"
          >
            <div>
              <ul
                class="bp3-menu"
              >
                <li
                  class="menuItem active"
                >
                  <p
                    class="font lineclamp main menuItemLabel"
                    style="--text-line-clamp: 1;"
                  >
                    Bulbasaur
                  </p>
                </li>
                <li
                  class="menuItem"
                >
                  <p
                    class="font lineclamp main menuItemLabel"
                    style="--text-line-clamp: 1;"
                  >
                    Ivysaur
                  </p>
                </li>
                <li
                  class="menuItem"
                >
                  <p
                    class="font lineclamp main menuItemLabel"
                    style="--text-line-clamp: 1;"
                  >
                    Venusaur
                  </p>
                </li>
                <li
                  class="menuItem"
                >
                  <p
                    class="font lineclamp main menuItemLabel"
                    style="--text-line-clamp: 1;"
                  >
                    Charmander
                  </p>
                </li>
                <li
                  class="menuItem"
                >
                  <p
                    class="font lineclamp main menuItemLabel"
                    style="--text-line-clamp: 1;"
                  >
                    Charmeleon
                  </p>
                </li>
                <li
                  class="menuItem"
                >
                  <p
                    class="font lineclamp main menuItemLabel"
                    style="--text-line-clamp: 1;"
                  >
                    Charizard
                  </p>
                </li>
                <li
                  class="menuItem"
                >
                  <p
                    class="font lineclamp main menuItemLabel"
                    style="--text-line-clamp: 1;"
                  >
                    Squirtle
                  </p>
                </li>
                <li
                  class="menuItem"
                >
                  <p
                    class="font lineclamp main menuItemLabel"
                    style="--text-line-clamp: 1;"
                  >
                    Wartortle
                  </p>
                </li>
                <li
                  class="menuItem"
                >
                  <p
                    class="font lineclamp main menuItemLabel"
                    style="--text-line-clamp: 1;"
                  >
                    Blastoise
                  </p>
                </li>
                <li
                  class="menuItem"
                >
                  <p
                    class="font lineclamp main menuItemLabel"
                    style="--text-line-clamp: 1;"
                  >
                    Caterpie
                  </p>
                </li>
                <li
                  class="menuItem"
                >
                  <p
                    class="font lineclamp main menuItemLabel"
                    style="--text-line-clamp: 1;"
                  >
                    Metapod
                  </p>
                </li>
                <li
                  class="menuItem"
                >
                  <p
                    class="font lineclamp main menuItemLabel"
                    style="--text-line-clamp: 1;"
                  >
                    Butterfree
                  </p>
                </li>
                <li
                  class="menuItem"
                >
                  <p
                    class="font lineclamp main menuItemLabel"
                    style="--text-line-clamp: 1;"
                  >
                    Weedle
                  </p>
                </li>
                <li
                  class="menuItem"
                >
                  <p
                    class="font lineclamp main menuItemLabel"
                    style="--text-line-clamp: 1;"
                  >
                    Kakuna
                  </p>
                </li>
                <li
                  class="menuItem"
                >
                  <p
                    class="font lineclamp main menuItemLabel"
                    style="--text-line-clamp: 1;"
                  >
                    Beedrill
                  </p>
                </li>
                <li
                  class="menuItem"
                >
                  <p
                    class="font lineclamp main menuItemLabel"
                    style="--text-line-clamp: 1;"
                  >
                    Pidgey
                  </p>
                </li>
                <li
                  class="menuItem"
                >
                  <p
                    class="font lineclamp main menuItemLabel"
                    style="--text-line-clamp: 1;"
                  >
                    Pidgeotto
                  </p>
                </li>
                <li
                  class="menuItem"
                >
                  <p
                    class="font lineclamp main menuItemLabel"
                    style="--text-line-clamp: 1;"
                  >
                    Pidgeot
                  </p>
                </li>
                <li
                  class="menuItem"
                >
                  <p
                    class="font lineclamp main menuItemLabel"
                    style="--text-line-clamp: 1;"
                  >
                    Rattata
                  </p>
                </li>
                <li
                  class="menuItem"
                >
                  <p
                    class="font lineclamp main menuItemLabel"
                    style="--text-line-clamp: 1;"
                  >
                    Raticate
                  </p>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Select/> tests no matching results: Filtered Menu 1`] = `
<div>
  <div
    class="bp3-popover-wrapper main bp3-fill"
  >
    <div
      class="bp3-popover-target bp3-popover-open"
    >
      <div
        class="bp3-input-group"
      >
        <input
          class="bp3-input"
          placeholder="- Select -"
          style="padding-right: 0px;"
          type="text"
          value="abcde"
        />
        <span
          class="bp3-input-action"
        >
          <span
            aria-hidden="true"
            class="bp3-icon bp3-icon-chevron-down main padding padding-small"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            >
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
    <div
      class="bp3-overlay bp3-overlay-open bp3-overlay-inline"
    >
      <div
        class="bp3-transition-container bp3-popover-appear bp3-popover-appear-active"
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      >
        <div
          class="bp3-popover bp3-minimal bp3-select-popover popover"
        >
          <div
            class="bp3-popover-content"
          >
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Select/> tests works with async data 1`] = `
<div>
  <div
    class="bp3-popover-wrapper main bp3-fill"
  >
    <div
      class="bp3-popover-target"
    >
      <div
        class="bp3-input-group"
      >
        <input
          class="bp3-input"
          placeholder="- Select -"
          style="padding-right: 0px;"
          type="text"
          value=""
        />
        <span
          class="bp3-input-action"
        >
          <span
            aria-hidden="true"
            class="bp3-icon bp3-icon-chevron-down main padding padding-small"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            >
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Select/> tests works with async data: Loading state 1`] = `
<div>
  <div
    class="bp3-popover-wrapper main bp3-fill"
  >
    <div
      class="bp3-popover-target bp3-popover-open"
    >
      <div
        class="bp3-input-group"
      >
        <input
          class="bp3-input"
          placeholder="- Select -"
          style="padding-right: 0px;"
          type="text"
          value=""
        />
        <span
          class="bp3-input-action"
        >
          <span
            aria-hidden="true"
            class="bp3-icon bp3-icon-chevron-down main padding padding-small"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            >
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
    <div
      class="bp3-overlay bp3-overlay-open bp3-overlay-inline"
    >
      <div
        class="bp3-transition-container bp3-popover-appear bp3-popover-appear-active"
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      >
        <div
          class="bp3-popover bp3-minimal bp3-select-popover popover"
        >
          <div
            class="bp3-popover-content"
          >
            <div>
              <ul
                class="bp3-menu"
              >
                <li
                  class="menuItem loading"
                >
                  Loading results...
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Select/> tests works with static data 1`] = `
<div>
  <div
    class="bp3-popover-wrapper main bp3-fill"
  >
    <div
      class="bp3-popover-target"
    >
      <div
        class="bp3-input-group"
      >
        <input
          class="bp3-input"
          placeholder="- Select -"
          style="padding-right: 0px;"
          type="text"
          value=""
        />
        <span
          class="bp3-input-action"
        >
          <span
            aria-hidden="true"
            class="bp3-icon bp3-icon-chevron-down main padding padding-small"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            >
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;
